adding select role
